[package]
name = "text-paster"
version = "0.2.0"
edition = "2021"
description = "A tool to paste texts by simulating keystrokes written by Jason Clark Altmann"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27.2"
egui = "0.27.2"
enigo = "0.1.0"