[package]
name = "text-paster"
version = "0.2.0"
edition = "2021"
description = "A tool to paste texts by simulating keystrokes written by Jason Clark Altmann"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.23.0"
egui = "0.23.0"
enigo = "0.1.3"
winapi = { version = "0.3", features = ["winuser"] }

[package.metadata.windows]
icon = "resources/icon.ico"
